--- a/TrackMyMacros.App4/Components/AddSetComponent.razor
+++ b/TrackMyMacros.App4/Components/AddSetComponent.razor
@@ -1,5 +1,15 @@
-﻿<h3>AddSetComponent</h3>
+﻿@using TrackMyMacros.Domain.Aggregates.Mesocycle
+<div class="container">
 
-@code {
-    
-}
+    @*<div class="row py-1 px-3" T style="background-color:@(IsChecked ? "grey" : "transparent")">
+        <div class="col-4">
+            <RadzenNumeric TValue="double" @bind-Value="Set.Weight">Weight</RadzenNumeric>
+        </div>
+        <div class="col-4">
+            <RadzenNumeric TValue="int" @bind-Value="@Set.Reps">Reps</RadzenNumeric>
+        </div>
+        <div class="col-1">
+            <RadzenButton Click="@OnSave" Icon="save" ButtonStyle="ButtonStyle.Primary"/>
+        </div>
+    </div>*@
+</div>
