--- a/TrackMyMacros.App4/Pages/MacroBasedDay.razor
+++ b/TrackMyMacros.App4/Pages/MacroBasedDay.razor
@@ -23,7 +23,7 @@ else
             <div class="row py-3">
                 <h3>Meal @(i + 1)</h3>
 
-                <MealComponent2 OnMealMacrosChanged="OnMealMacrosChanged" Mesocycle="meal" FoodList="@_foodList" AllowedProtein="meal.AllowedProtein"
+                <MealComponent2 OnMealMacrosChanged="OnMealMacrosChanged" Meal="meal" FoodList="@_foodList" AllowedProtein="meal.AllowedProtein"
                                 AllowedCarbohydrate="meal.AllowedCarbohydrate" AllowedFat="meal.AllowedFat" ParentDayModel="_day" MealIndex="i" OnSaveDay="OnSave"
                                 OnCopyMeals="ShowCopyMealsDialog">
                 </MealComponent2>
